--- a/css/main.css
+++ b/css/main.css
@@ -1411,10 +1411,11 @@ input::-moz-focus-inner {
 }
 
 .home-content__counter .days span {
-  display: inline-block;
+
   font-family: "metropolis-regular", sans-serif;
   letter-spacing: 0;
-  
+  background-color: #000000;
+  padding: 9px 12px;
   bottom: 1.3em;
 color: #FFFFFF;
 }
