--- a/css/main.css
+++ b/css/main.css
@@ -1410,14 +1410,7 @@ input::-moz-focus-inner {
   margin-top: -0.9rem;
 }
 
-.home-content__counter .days span {
-
-  font-family: "metropolis-regular", sans-serif;
-  letter-spacing: 0;
-  
-  padding: 9px 12px;
-  bottom: 1.3em;
-color: #FFFFFF;
+.
 }
 
 .home-content__line {
